syntax = "proto3";

option go_package = "internal/grpc;grpc";

package grpc;

service BookService {
  rpc GetBooks(GetBooksRequest) returns (GetBooksResponse);
  rpc AddBook(Book) returns (AddBookResponse);
}

message GetBooksRequest {}

message GetBooksResponse {
  repeated Book books = 1;
}

message Book {
  string id = 1;
  string author = 2;
  string name = 3;
  string price = 4;
}

message AddBookResponse {
  string id = 1;
}
